fixed site header image stretching

--- a/assets/scss/theme/_header.scss
+++ b/assets/scss/theme/_header.scss
@@ -92,9 +92,6 @@ header {
 	#home-logo {
 		height: 126px;
 	}
-
-	&.food {
-	}
 }
 
 #site-header {
